--- a/Tutoriais/Tutorial_Criando_uma_Conta_AWS.ipynb
+++ b/Tutoriais/Tutorial_Criando_uma_Conta_AWS.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tutorial - Criando uma Conta AWS.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOCJtzNr8ovqRwhQWQgQmdl",
+      "authorship_tag": "ABX9TyOkOL991Tla6zED2svFdIz0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,10 @@
       },
       "source": [
         "**Criando uma conta na AWS.**\n",
+        "\n",
+        "Quando você cria uma Conta do AWS, você recebe uma única identidade de logon que tem acesso completo a todos os Serviços e recursos da conta AWS. Essa identidade é chamada conta Usuário AWS raiz. Fazer login no AWS usando o endereço de e-mail e a senha usados para criar a conta, você terá acesso total a todas os recursos em sua conta.\n",
+        "\n",
+        "---------------------------\n",
         "\n",
         "Acesse a Console AWS pelo link https://aws.amazon.com/pt/?nc1=h_ls\n",
         "\n",
