--- a/Tutoriais/Tutorial_Credenciais_IAM.ipynb
+++ b/Tutoriais/Tutorial_Credenciais_IAM.ipynb
@@ -6,7 +6,7 @@
       "name": "Tutorial Credenciais IAM.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPKDlnbPNGhvJtG6GZ9BlB3",
+      "authorship_tag": "ABX9TyNqx1PRUbT31z0wRkrCL14v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,9 @@
       },
       "source": [
         "**Criando Credenciais de autenticação no IAM:**\n",
+        "\n",
+        "By Flopes/2021-07\n",
+        "\n",
         "\n",
         "\n",
         "1)Acesse o serviço IAM via console.\n",
